@@ -13,9 +13,23 @@
 
 using namespace std;
 
+/**
+ * Class representing a basic, empty window.  Intended to be subclassed, but can be used
+ * as-is if necessary.
+ */
 class Window : public Gadget {
 
 public:
+	/**
+	 * Constructor.
+	 * @param x The x co-ordinate of the window.
+	 * @param y The y co-ordinate of the window.
+	 * @param width The width of the window.
+	 * @param height The height of the window.
+	 * @param title The title of the window.
+	 * @param flags Standard gadget flags bitmask.
+	 * @param font Font to use with this window.
+	 */
 	Window(s16 x, s16 y, u16 width, u16 height, char* title, u32 flags, FontBase* font = NULL);
 
 	/**
@@ -23,9 +37,30 @@ public:
 	 */
 	virtual inline void draw() { Gadget::draw(); };
 
+	/**
+	 * Draw the area of this gadget that falls within the clipping region.
+	 * Called by the draw() function to draw all visible regions.
+	 * @param clipRect The clipping region to draw.
+	 * @see draw()
+	 */
 	virtual void draw(Rect clipRect);
 
+	/**
+	 * Release this gadget at the supplied co-ordinates
+	 * @param x X co-ordinate of the release.
+	 * @param y Y co-ordinate of the release.
+	 * @return True if the release was successful.
+	 */
 	virtual bool release(s16 x, s16 y);
+
+	/**
+	 * Drag the gadget to the supplied co-ordinates.
+	 * @param x The x co-ordinate of the stylus.
+	 * @param y The y co-ordinate of the stylus.
+	 * @param vX The horizontal distance that the stylus was dragged.
+	 * @param vY The vertical distance that the stylus was dragged.
+	 * @return True if the drag was successful.
+	 */
 	virtual bool drag(s16 x, s16 y, s16 vX, s16 vY);
 
 protected:
