@@ -12,6 +12,17 @@ using namespace std;
 class WindowBorderButton : public DecorationGlyphButton {
 
 public:
+
+	/**
+	 * Constructor.
+	 * @param x The x co-ordinate of the gadget.
+	 * @param y The y co-ordinate of the gadget.
+	 * @param width The width of the gadget.
+	 * @param height The height of the gadget.
+	 * @param normalGlyph The glyph to display when the gadget is not clicked.
+	 * @param clickedGlyph The glyph to display when the gadget is clicked.
+	 * @param font The font to use.
+	 */
 	WindowBorderButton(s16 x, s16 y, u16 width, u16 height, char normalGlyph, char clickedGlyph, FontBase* font = NULL);
 
 	/**
@@ -19,6 +30,12 @@ public:
 	 */
 	virtual inline void draw() { Gadget::draw(); };
 
+	/**
+	 * Draw the area of this gadget that falls within the clipping region.
+	 * Called by the draw() function to draw all visible regions.
+	 * @param clipRect The clipping region to draw.
+	 * @see draw()
+	 */
 	virtual void draw(Rect clipRect);
 
 protected:
